fix ts and login page

--- a/login-page/src/app/login/login.component.html
+++ b/login-page/src/app/login/login.component.html
@@ -1,31 +1,17 @@
-<div class="container">
-    <input type="checkbox" id="check">
-    <div class="login form">
-      <header>Login</header>
-      <form action="#">
-        <input type="text" placeholder="Enter your email">
-        <input type="password" placeholder="Enter your password">
-        <a href="#">Forgot password?</a>
-        <input type="button" class="button" value="Login">
-      </form>
-      <div class="signup">
-        <span class="signup">Don't have an account?
-         <label for="check">Signup</label>
-        </span>
-      </div>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <!-- Email Input Field -->
+    <input type="email" formControlName="email" placeholder="Enter your email">
+    <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="error">
+      {{ emailError }}
     </div>
-    <div class="registration form">
-      <header>Signup</header>
-      <form action="#">
-        <input type="text" placeholder="Enter your email">
-        <input type="password" placeholder="Create a password">
-        <input type="password" placeholder="Confirm your password">
-        <input type="button" class="button" value="Signup">
-      </form>
-      <div class="signup">
-        <span class="signup">Already have an account?
-         <label for="check">Login</label>
-        </span>
-      </div>
+  
+    <!-- Password Input Field -->
+    <input type="password" formControlName="password" placeholder="Enter your password">
+    <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="error">
+      {{ passwordError }}
     </div>
-  </div>
+  
+    <!-- Submit Button -->
+    <button type="submit" [disabled]="loginForm.invalid">Login</button>
+  </form>
+  
